--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - lib/assets/health_sign-2-512.png
+    - lib/assets/images.jpeg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
