--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,12 @@ flutter:
     - lib/assets/images.jpeg
     - lib/assets/Screenshot 2019-10-05 at 16.11.47.png
     - lib/assets/590825882-H.jpg
+    - lib/assets/Gateway-monument-India-entrance-Mumbai-Harbour-coast.jpg
+    - lib/assets/new-delhi-india-gate-147623366844-orijgp.jpg
+    - lib/assets/jctp0084-central-area-bangalore-india-moore-3.jpg
+    - lib/assets/HYDERABAD.jpg
+    - lib/assets/shaniwar-wada-pune-tourism-entry-fee-timings-holidays-reviews-header.jpg
+    - lib/assets/KOLKATA.jpg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
