--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.12.0+2
+  intl: ^0.16.0
+  provider: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
