--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  intl: ^0.16.0
   http: ^0.12.0+2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "dev_assets/medicine.png"
+  adaptive_icon_background: "#191919"
+  adaptive_icon_foreground: "dev_assets/small.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
