--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - lib/assets/jctp0084-central-area-bangalore-india-moore-3.jpg
     - lib/assets/HYDERABAD.jpg
     - lib/assets/shaniwar-wada-pune-tourism-entry-fee-timings-holidays-reviews-header.jpg
+    - android/app/src/main/res/drawable/splash_icon.png
     - lib/assets/KOLKATA.jpg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
@@ -76,23 +77,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Raleway
-      fonts:
-        - asset: assets/fonts/Raleway-Regular.ttf
-        - asset: assets/fonts/Raleway-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/Raleway-Black.ttf
-          weight: 900
-    - family: RobotoCondensed
-      fonts:
-        - asset: assets/fonts/RobotoCondensed-Regular.ttf
-        - asset: assets/fonts/RobotoCondensed-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/RobotoCondensed-Light.ttf
-          weight: 300
-        - asset: assets/fonts/RobotoCondensed-Italic.ttf
-          style: italic
+#  fonts:
+#    - family: Raleway
+#      fonts:
+#        - asset: dev_assets/fonts/Raleway-Regular.ttf
+#        - asset: dev_assets/fonts/Raleway-Bold.ttf
+#          weight: 700
+#        - asset: dev_assets/fonts/Raleway-Black.ttf
+#          weight: 900
+#    - family: RobotoCondensed
+#      fonts:
+#        - asset: dev_assets/fonts/RobotoCondensed-Regular.ttf
+#        - asset: dev_assets/fonts/RobotoCondensed-Bold.ttf
+#          weight: 700
+#        - asset: dev_assets/fonts/RobotoCondensed-Light.ttf
+#          weight: 300
+#        - asset: dev_assets/fonts/RobotoCondensed-Italic.ttf
+#          style: italic
   # fonts:
   #   - family: Schyler
   #     fonts:
