--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   http: ^0.12.0+2
   intl: ^0.16.0
   provider: ^3.1.0
+  flutter_launcher_icons: ^0.7.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -63,6 +64,8 @@ flutter:
     - lib/assets/shaniwar-wada-pune-tourism-entry-fee-timings-holidays-reviews-header.jpg
     - android/app/src/main/res/drawable/splash_icon.png
     - lib/assets/KOLKATA.jpg
+    - lib/dev_assets/medicine.png
+    - lib/dev_assets/small.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
