--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,8 +64,10 @@ flutter:
     - lib/assets/shaniwar-wada-pune-tourism-entry-fee-timings-holidays-reviews-header.jpg
     - android/app/src/main/res/drawable/splash_icon.png
     - lib/assets/KOLKATA.jpg
-    - lib/dev_assets/medicine.png
-    - lib/dev_assets/small.png
+    - android/dev_assets/medicine.png
+    - android/dev_assets/small.png
+    - android/dev_assets/building.png
+    - android/dev_assets/healthcare.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
@@ -80,23 +82,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-#  fonts:
-#    - family: Raleway
-#      fonts:
-#        - asset: dev_assets/fonts/Raleway-Regular.ttf
-#        - asset: dev_assets/fonts/Raleway-Bold.ttf
-#          weight: 700
-#        - asset: dev_assets/fonts/Raleway-Black.ttf
-#          weight: 900
-#    - family: RobotoCondensed
-#      fonts:
-#        - asset: dev_assets/fonts/RobotoCondensed-Regular.ttf
-#        - asset: dev_assets/fonts/RobotoCondensed-Bold.ttf
-#          weight: 700
-#        - asset: dev_assets/fonts/RobotoCondensed-Light.ttf
-#          weight: 300
-#        - asset: dev_assets/fonts/RobotoCondensed-Italic.ttf
-#          style: italic
+  fonts:
+    - family: Raleway
+      fonts:
+        - asset: android/dev_assets/fonts/Raleway-Regular.ttf
+        - asset: android/dev_assets/fonts/Raleway-Bold.ttf
+          weight: 700
+        - asset: android/dev_assets/fonts/Raleway-Black.ttf
+          weight: 900
+    - family: RobotoCondensed
+      fonts:
+        - asset: android/dev_assets/fonts/RobotoCondensed-Regular.ttf
+        - asset: android/dev_assets/fonts/RobotoCondensed-Bold.ttf
+          weight: 700
+        - asset: android/dev_assets/fonts/RobotoCondensed-Light.ttf
+          weight: 300
+        - asset: android/dev_assets/fonts/RobotoCondensed-Italic.ttf
+          style: italic
   # fonts:
   #   - family: Schyler
   #     fonts:
